# spec/api-spec.yaml
@@ -52,14 +52,14 @@ paths:
         "default":
           $ref: "#/components/responses/ServerError"
 
-  /ads/interests:
+  /interests:
     get:
-      summary: "get all interest category"
-      operationId: adsInterest
-      description: "Send list of interests"
+      summary: "get all interests"
+      operationId: interests
+      description: "Get list of all interests"
       x-visibility: public
       tags:
-        - "ads"
+        - "interests"
       responses:
         '200':
           $ref: "#/components/responses/InterestListResponse"
@@ -70,21 +70,13 @@ paths:
         "default":
           $ref: "#/components/responses/ServerError"
 
-  /ads/vids:
+  /ads:
     get:
-      summary: "query ads base on interest"
-      operationId: adsVids
+      summary: "get all ads"
+      operationId: ads
       x-visibility: public
       tags:
         - "ads"
-      parameters:
-        - in: "query"
-          name: "interest"
-          schema:
-            type: "string"
-            minLength: 4
-          required: true
-          description: "interest name"
       responses:
         '200':
           $ref: "#/components/responses/AdsListResponse"
@@ -205,10 +197,6 @@ components:
           type: "string"
           format: "uuid"
           description: "The owner id of the ads"
-        interest_id:
-          type: "string"
-          format: "uuid"
-          description: "The id of interest"
         media_link:
           type: "string"
         media_type:
@@ -261,6 +249,10 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/AdsList'
+          example:
+            status: "OK",
+            message: "Ads fetched successfully"
+            data: null,
 
     InvalidRequest:
       description: Request could not be validated
@@ -269,8 +261,9 @@ components:
           schema:
             $ref: "#/components/schemas/ErrorMessageDto"
           example:
-            code: 'BAD_REQUEST'
-            message: 'Request could not be validated.'
+            status: "BAD REQUEST",
+            message: "Request could not be validated"
+            data: null,
 
     Unauthorized:
       description: Client is not authorized to make request
@@ -279,8 +272,9 @@ components:
           schema:
             $ref: "#/components/schemas/ErrorMessageDto"
           example:
-            code: 'UNAUTHORIZED'
-            message: 'Either client security header is missing or it is not valid.'
+            status: "UNAUTHORIZED",
+            message: "Either client security header is missing or it is not valid."
+            data: null,
 
     NotFound:
       description: Entity was not found
@@ -289,8 +283,10 @@ components:
           schema:
             $ref: "#/components/schemas/ErrorMessageDto"
           example:
-            code: 'NOT_FOUND'
-            message: 'Information could not be found'
+            status: "NOT_FOUND",
+            message: "Information could not be found."
+            data: null,
+
 
     ConflictError:
       description: Entity already exist while user tries to create it.
@@ -299,8 +295,9 @@ components:
           schema:
             $ref: "#/components/schemas/ErrorMessageDto"
           example:
-            code: 'ACCESS_DENIED'
-            message: 'Entity already exist!'
+            status: "ACCESS_DENIED",
+            message: "Entity already exist!"
+            data: null,
 
     AccessDenied:
       description: Expected permission is not available.
@@ -309,8 +306,9 @@ components:
           schema:
             $ref: "#/components/schemas/ErrorMessageDto"
           example:
-            code: 'ACCESS_DENIED'
-            message: 'Expected permission or scope is not present.'
+            status: "ACCESS_DENIED",
+            message: "Expected permission or scope is not present."
+            data: null,
 
     ServerError:
       description: Internal Server Error
@@ -319,8 +317,9 @@ components:
           schema:
             $ref: "#/components/schemas/ErrorMessageDto"
           example:
-            code: 'INTERNAL_ERROR'
-            message: 'An internal server error occurred.'
+            status: "INTERNAL_ERROR",
+            message: "An internal server error occurred."
+            data: null,
 
   securitySchemes:
     bearerToken:
